[56845] chore: code review
Co-authored-by: Copilot <copilot@github.com>